Main Css Basic Styles added and Overflow in Navbar Fixed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,57 @@
 /* Custom Font */
 @import url('https://fonts.googleapis.com/css?family=Gamja+Flower:400');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Pau+Cin+Hau&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+/* base styles  */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Noto Sans Pau Cin Hau';
+  font-weight: 400;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+body {
+  background: var(--background);
+  color: var(--text);
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Noto Sans Pau Cin Hau';
+  font-weight: 700;
+}
+
+html {
+  font-size: 100%;
+} /* 16px */
+
+h1 {
+  font-size: 4.21rem; /* 67.36px */
+}
+
+h2 {
+  font-size: 3.158rem; /* 50.56px */
+}
+
+h3 {
+  font-size: 2.369rem; /* 37.92px */
+}
+
+h4 {
+  font-size: 1.777rem; /* 28.48px */
+}
+
+h5 {
+  font-size: 1.333rem; /* 21.28px */
+}
+
+small {
+  font-size: 0.75rem; /* 12px */
+}
+
+a {
+  text-decoration: none;
+}
